Add sign up form

--- a/UI/index.html
+++ b/UI/index.html
@@ -18,7 +18,7 @@
       </div>      
     </header> 
 
-    <div id="mainwrapper">
+    <div id="mainwrapper"><!-- .Main wrapper -->
       <div class="row">
         <div class="col-12">
           <article class="loginbox">
@@ -28,14 +28,14 @@
             <div class="loginform">
               <form>
                 <div class="inputdiv col-12">
-                  <input type="text" name="email" id="email" placeholder="Enter Email" required>
+                  <input type="email" name="email" id="email" placeholder="Enter Email" required>
                   <br>
-                  <label for="email">Email Address</label>
+                  <label for="email">EMAIL ADDRESS</label>
                 </div>
                 <div class="inputdiv col-12">
                   <input type="password" name="pass" id="pass" placeholder="Enter password" required>
                   <br>
-                  <label for="pass">Password</label>
+                  <label for="pass">PASSWORD</label>
                 </div>
                 <div class="inputdiv col-12">
                   <div class="passlnk col-8">
@@ -49,8 +49,8 @@
             </div>
           </article>
         </div>
-    </div>
-  </div>
+      </div>
+    </div><!-- .Main wrapper End -->
 
     <footer>
       &copy; 2018 | MyDiary
