--- a/UI/signup.html
+++ b/UI/signup.html
@@ -18,6 +18,42 @@
       </div>      
     </header> 
 
+    <div id="mainwrapper"><!-- .Main wrapper -->
+      <div class="row">
+        <div class="col-12">
+          <article class="signinbox">
+            <div class="logindiv">
+              <h1>Login</h1>
+            </div>
+            <div class="loginform">
+              <form>
+                <div class="inputdiv col-12">
+                  <input type="email" name="email" id="email" placeholder="Enter Email" required>
+                  <br>
+                  <label for="email">Email Address</label>
+                </div>
+                <div class="inputdiv col-12">
+                  <input type="password" name="pass" id="pass" placeholder="Enter password" required>
+                  <br>
+                  <label for="pass">Password</label>
+                </div>
+                <div class="inputdiv col-12">
+                  <input type="password" name="pass2" id="pass2" placeholder="Re-Enter password" required>
+                  <br>
+                  <label for="pass2">Password</label>
+                </div>
+                <div class="inputdiv col-12">
+                  <div class="passlnk col-12">
+                    <input type="submit" name="" value="Sign Up" style="background-color: green">
+                  </div>
+                </div>
+              </form>
+            </div><!-- .LoginBox -->
+          </article><!-- .LoginBox End -->
+        </div>
+      </div>
+    </div>
+
     <footer>
       &copy; 2018 | MyDiary
     </footer>
