--- a/UI/signup.html
+++ b/UI/signup.html
@@ -23,24 +23,24 @@
         <div class="col-12">
           <article class="signinbox">
             <div class="logindiv">
-              <h1>Login</h1>
+              <h1>Sign Up</h1>
             </div>
             <div class="loginform">
               <form>
                 <div class="inputdiv col-12">
                   <input type="email" name="email" id="email" placeholder="Enter Email" required>
                   <br>
-                  <label for="email">Email Address</label>
+                  <label for="email">EMAIL ADDRESS</label>
                 </div>
                 <div class="inputdiv col-12">
                   <input type="password" name="pass" id="pass" placeholder="Enter password" required>
                   <br>
-                  <label for="pass">Password</label>
+                  <label for="pass">PASSWORD</label>
                 </div>
                 <div class="inputdiv col-12">
                   <input type="password" name="pass2" id="pass2" placeholder="Re-Enter password" required>
                   <br>
-                  <label for="pass2">Password</label>
+                  <label for="pass2">CONFIRM PASSWORD</label>
                 </div>
                 <div class="inputdiv col-12">
                   <div class="passlnk col-12">
@@ -59,3 +59,4 @@
     </footer>
   </body>
 </html>
+
