add style to header links

--- a/UI/enteries.html
+++ b/UI/enteries.html
@@ -19,6 +19,13 @@
       </div>      
     </header> 
 
+    <div id="mainWrapper"><!-- .Main Wrapper -->
+      <div class="row">
+        <aside class="col-4"></aside>
+        <section class="col-8"></section>
+      </div>
+    </div><!-- .Main Wrapper End -->
+
     <footer>
       &copy; 2018 | MyDiary
     </footer>
