--- a/UI/index.html
+++ b/UI/index.html
@@ -26,7 +26,7 @@
               <h1>Login</h1>
             </div>
             <div class="loginform">
-              <form>
+              <form action="enteries.html">
                 <div class="inputdiv col-12">
                   <input type="email" name="email" id="email" placeholder="Enter Email" required>
                   <br>
