Add nav for all entries and entry categories

--- a/UI/enteries.html
+++ b/UI/enteries.html
@@ -21,8 +21,49 @@
 
     <div id="mainWrapper"><!-- .Main Wrapper -->
       <div class="row">
-        <aside class="col-4"></aside>
-        <section class="col-8"></section>
+        <aside class="col-2">
+          <h3>ENTERIES</h3>
+          <section id="entriesList">
+            <nav class="sidenav">
+              <ul>
+                <a href=""><li>Story Title</li></a>
+                <a href=""><li>Story Title</li></a>
+                <a href=""><li>Story Title</li></a>
+                <a href=""><li>Story Title</li></a>
+                <a href=""><li>Story Title</li></a>
+                <a href=""><li>Story Title</li></a>
+                <a href=""><li>Story Title</li></a>
+                <a href=""><li>Story Title</li></a>
+                <a href=""><li>Story Title</li></a>
+                <a href=""><li>Story Title</li></a>
+                <a href=""><li>Story Title</li></a>
+              </ul>
+            </nav>
+          </section>
+
+          <h3>CATEGORIES</h3>
+          <section id="entriesList">
+            <nav class="sidenav">
+              <ul>
+                <a href=""><li>Love</li></a>
+                <a href=""><li>Family</li></a>
+                <a href=""><li>School</li></a>
+                <a href=""><li>Friendship</li></a>
+                <a href=""><li>Sex</li></a>
+                <a href=""><li>Father</li></a>
+                <a href=""><li>God</li></a>
+                <a href=""><li>Mother</li></a>
+                <a href=""><li>James</li></a>
+                <a href=""><li>Freedom</li></a>
+                <a href=""><li>Life</li></a>
+              </ul>
+            </nav>
+          </section>
+
+        </aside>
+        <section class="col-10 mainentries">
+          <h3>Enteries</h3>
+        </section>
       </div>
     </div><!-- .Main Wrapper End -->
 
