--- a/UI/enteries.html
+++ b/UI/enteries.html
@@ -9,7 +9,7 @@
   <body class="home"> 
     <header class="row">
       <div class="logo col-6">
-        <h2><a href=""><span class="logoA">My</span>Diary</a></h2>
+        <h2><a href="index.html"><span class="logoA">My</span>Diary</a></h2>
       </div>  
       <div class="linkdiv col-6">
         <ul class="headerLinks">
