Add dummy entries

--- a/UI/enteries.html
+++ b/UI/enteries.html
@@ -14,14 +14,14 @@
       <div class="linkdiv col-6">
         <ul class="headerLinks">
           <li><a href="profile.html">Profile</a></li>
-          <li><a href="logout.html">Log Out</a></li>
+          <li><a href="index.html">Log Out</a></li>
         </ul>
       </div>      
     </header> 
 
     <div id="mainWrapper"><!-- .Main Wrapper -->
       <div class="row">
-        <aside class="col-2">
+        <aside class="col-2"><!-- Aside -->
           <h3>ENTERIES</h3>
           <section id="entriesList">
             <nav class="sidenav">
@@ -59,16 +59,176 @@
               </ul>
             </nav>
           </section>
+        </aside><!-- Aside Ends -->
 
-        </aside>
-        <section class="col-10 mainentries">
+        <section class="col-10 mainentries"><!-- Mainenteries -->
           <h3>Enteries</h3>
-        </section>
+          <div class="row">
+            <div id="buttons" class="col-12">
+              <button id="tess">New</button>
+            </div>
+            <div id="content">
+              <article class="col-3 col-s-4">
+                <a href="" class="link">
+                <figure>
+                  <img src="images/miss_u.jpg" alt="Missing you" width="100%">
+                  <figcaption>
+                    <h2>Wont Give Up</h2>
+                    <p>I wont give up on us, even if the stars get rough im giving u all my luv</p>
+                  </figcaption>
+                </figure>
+                </a>
+              </article>
+
+              <article class="col-3 col-s-4">
+                <a href="" class="link">
+                <figure>
+                  <img src="images/miss_u.jpg" alt="Missing you" width="100%">
+                  <figcaption>
+                    <h2>Wont Give Up</h2>
+                    <p>I wont give up on us, even if the stars get rough im giving u all my luv</p>
+                  </figcaption>
+                </figure>
+                </a>
+              </article>
+
+              <article class="col-3 col-s-4">
+                <a href="" class="link">
+                <figure>
+                  <img src="images/miss_u.jpg" alt="Missing you" width="100%">
+                  <figcaption>
+                    <h2>Wont Give Up</h2>
+                    <p>I wont give up on us, even if the stars get rough im giving u all my luv</p>
+                  </figcaption>
+                </figure>
+                </a>
+              </article>
+
+              <article class="col-3 col-s-4">
+                <a href="" class="link">
+                <figure>
+                  <img src="images/miss_u.jpg" alt="Missing you" width="100%">
+                  <figcaption>
+                    <h2>Wont Give Up</h2>
+                    <p>I wont give up on us, even if the stars get rough im giving u all my luv</p>
+                  </figcaption>
+                </figure>
+                </a>
+              </article>
+
+              <article class="col-3 col-s-4">
+                <a href="" class="link">
+                <figure>
+                  <img src="images/miss_u.jpg" alt="Missing you" width="100%">
+                  <figcaption>
+                    <h2>Wont Give Up</h2>
+                    <p>I wont give up on us, even if the stars get rough im giving u all my luv</p>
+                  </figcaption>
+                </figure>
+                </a>
+              </article>
+
+              <article class="col-3 col-s-4">
+                <a href="" class="link">
+                <figure>
+                  <img src="images/miss_u.jpg" alt="Missing you" width="100%">
+                  <figcaption>
+                    <h2>Wont Give Up</h2>
+                    <p>I wont give up on us, even if the stars get rough im giving u all my luv</p>
+                  </figcaption>
+                </figure>
+                </a>
+              </article>
+
+              <article class="col-3 col-s-4">
+                <a href="" class="link">
+                <figure>
+                  <img src="images/miss_u.jpg" alt="Missing you" width="100%">
+                  <figcaption>
+                    <h2>Wont Give Up</h2>
+                    <p>I wont give up on us, even if the stars get rough im giving u all my luv</p>
+                  </figcaption>
+                </figure>
+                </a>
+              </article>
+
+              <article class="col-3 col-s-4">
+                <a href="" class="link">
+                <figure>
+                  <img src="images/miss_u.jpg" alt="Missing you" width="100%">
+                  <figcaption>
+                    <h2>Wont Give Up</h2>
+                    <p>I wont give up on us, even if the stars get rough im giving u all my luv</p>
+                  </figcaption>
+                </figure>
+                </a>
+              </article>
+
+              <article class="col-3 col-s-4">
+                <a href="" class="link">
+                <figure>
+                  <img src="images/miss_u.jpg" alt="Missing you" width="100%">
+                  <figcaption>
+                    <h2>Wont Give Up</h2>
+                    <p>I wont give up on us, even if the stars get rough im giving u all my luv</p>
+                  </figcaption>
+                </figure>
+                </a>
+              </article>
+
+              <article class="col-3 col-s-4">
+                <a href="" class="link">
+                <figure>
+                  <img src="images/miss_u.jpg" alt="Missing you" width="100%">
+                  <figcaption>
+                    <h2>Wont Give Up</h2>
+                    <p>I wont give up on us, even if the stars get rough im giving u all my luv</p>
+                  </figcaption>
+                </figure>
+                </a>
+              </article>
+
+              <article class="col-3 col-s-4">
+                <a href="" class="link">
+                <figure>
+                  <img src="images/miss_u.jpg" alt="Missing you" width="100%">
+                  <figcaption>
+                    <h2>Wont Give Up</h2>
+                    <p>I wont give up on us, even if the stars get rough im giving u all my luv</p>
+                  </figcaption>
+                </figure>
+                </a>
+              </article>
+
+              <article class="col-3 col-s-4">
+                <a href="" class="link">
+                <figure>
+                  <img src="images/miss_u.jpg" alt="Missing you" width="100%">
+                  <figcaption>
+                    <h2>Wont Give Up</h2>
+                    <p>I wont give up on us, even if the stars get rough im giving u all my luv</p>
+                  </figcaption>
+                </figure>
+                </a>
+              </article>
+            </div>
+          </div>
+        </section><!-- Mainenteries Ends -->
       </div>
     </div><!-- .Main Wrapper End -->
 
     <footer>
       &copy; 2018 | MyDiary
     </footer>
+
+    <script type="text/javascript">
+      let test = document.getElementsByClassName('link');
+      function doy(e){
+        e.preventDefault();
+        console.log(`clicked `);}
+        for (var i = 0; i < test.length; i++) {
+          test[i].onclick = doy;
+        }
+    </script>
   </body>
 </html>
