--- a/UI/enteries.html
+++ b/UI/enteries.html
@@ -62,13 +62,12 @@
         </aside><!-- Aside Ends -->
 
         <section class="col-10 mainentries"><!-- Mainenteries -->
-          <h3>Enteries</h3>
           <div class="row">
-            <div id="buttons" class="col-12">
-              <button id="tess">New</button>
+            <div id="new_link" class="col-12">
+              <a href="">New Entry</a>
             </div>
             <div id="content">
-              <article class="col-3 col-s-4">
+              <article class="col-2 col-s-4">
                 <a href="" class="link">
                 <figure>
                   <img src="images/miss_u.jpg" alt="Missing you" width="100%">
@@ -80,7 +79,7 @@
                 </a>
               </article>
 
-              <article class="col-3 col-s-4">
+              <article class="col-2 col-s-4">
                 <a href="" class="link">
                 <figure>
                   <img src="images/miss_u.jpg" alt="Missing you" width="100%">
@@ -92,7 +91,7 @@
                 </a>
               </article>
 
-              <article class="col-3 col-s-4">
+              <article class="col-2 col-s-4">
                 <a href="" class="link">
                 <figure>
                   <img src="images/miss_u.jpg" alt="Missing you" width="100%">
@@ -104,7 +103,7 @@
                 </a>
               </article>
 
-              <article class="col-3 col-s-4">
+              <article class="col-2 col-s-4">
                 <a href="" class="link">
                 <figure>
                   <img src="images/miss_u.jpg" alt="Missing you" width="100%">
@@ -116,7 +115,7 @@
                 </a>
               </article>
 
-              <article class="col-3 col-s-4">
+              <article class="col-2 col-s-4">
                 <a href="" class="link">
                 <figure>
                   <img src="images/miss_u.jpg" alt="Missing you" width="100%">
@@ -128,7 +127,7 @@
                 </a>
               </article>
 
-              <article class="col-3 col-s-4">
+              <article class="col-2 col-s-4">
                 <a href="" class="link">
                 <figure>
                   <img src="images/miss_u.jpg" alt="Missing you" width="100%">
@@ -140,7 +139,7 @@
                 </a>
               </article>
 
-              <article class="col-3 col-s-4">
+              <article class="col-2 col-s-4">
                 <a href="" class="link">
                 <figure>
                   <img src="images/miss_u.jpg" alt="Missing you" width="100%">
@@ -152,7 +151,7 @@
                 </a>
               </article>
 
-              <article class="col-3 col-s-4">
+              <article class="col-2 col-s-4">
                 <a href="" class="link">
                 <figure>
                   <img src="images/miss_u.jpg" alt="Missing you" width="100%">
@@ -164,7 +163,7 @@
                 </a>
               </article>
 
-              <article class="col-3 col-s-4">
+              <article class="col-2 col-s-4">
                 <a href="" class="link">
                 <figure>
                   <img src="images/miss_u.jpg" alt="Missing you" width="100%">
@@ -176,7 +175,7 @@
                 </a>
               </article>
 
-              <article class="col-3 col-s-4">
+              <article class="col-2 col-s-4">
                 <a href="" class="link">
                 <figure>
                   <img src="images/miss_u.jpg" alt="Missing you" width="100%">
@@ -188,7 +187,7 @@
                 </a>
               </article>
 
-              <article class="col-3 col-s-4">
+              <article class="col-2 col-s-4">
                 <a href="" class="link">
                 <figure>
                   <img src="images/miss_u.jpg" alt="Missing you" width="100%">
@@ -200,7 +199,7 @@
                 </a>
               </article>
 
-              <article class="col-3 col-s-4">
+              <article class="col-2 col-s-4">
                 <a href="" class="link">
                 <figure>
                   <img src="images/miss_u.jpg" alt="Missing you" width="100%">
@@ -211,6 +210,18 @@
                 </figure>
                 </a>
               </article>
+
+              <!-- The Modal -->
+            <div id="myModal" class="modal">
+              <!-- Modal content -->
+              <div class="modal-content">
+                <span class="close">&times;</span>
+                <img src="images/miss_u.jpg" width="100%" height="300">
+                <p id="story"></p>
+              </div>
+            </div>
+            <!-- Modal Ends -->
+
             </div>
           </div>
         </section><!-- Mainenteries Ends -->
@@ -222,13 +233,34 @@
     </footer>
 
     <script type="text/javascript">
-      let test = document.getElementsByClassName('link');
-      function doy(e){
-        e.preventDefault();
-        console.log(`clicked `);}
-        for (var i = 0; i < test.length; i++) {
-          test[i].onclick = doy;
-        }
+      let modal = document.getElementById('myModal');
+      // opens the modal
+      let link = document.getElementsByClassName("link");      
+      // Get the <span> element that closes the modal
+      let span = document.getElementsByClassName("close")[0];
+      let story = document.getElementById('story');
+      // When the user clicks on <span> (x), close the modal
+      span.onclick = function() {
+          modal.style.display = "none";
+      }
+      function showEntry(e) {
+        e.preventDefault();    
+        innerstory = 'For so long, I wished for the day. The day that our love would find its way. From my heart and into your soul, The feeling so strong, I had no control. When then that day came, when I found you again, I vowed never to make the same mistake. I knew I would never let you go, For my life is now complete in a way I cannot show. For eternity I will spend making you believe, You are the sole reason that I breathe. My life is yours, my hopes and desires too. Until my dying day, my heart is reserved just for you. You are everything I could ever need and more, More than I deserve or would dare wish for. You are my baby, my angel, my dream girl I\'m thankful every day that you are my whole world. For the time I spend with you, my heart truly sings My one, My only, My EVERYTHING. Source: https://www.familyfriendpoems.com/poem/my-one-my-only-my-everything...For so long, I wished for the day. The day that our love would find its way. From my heart and into your soul, The feeling so strong, I had no control. When then that day came, when I found you again, I vowed never to make the same mistake. I knew I would never let you go, For my life is now complete in a way I cannot show. For eternity I will spend making you believe, You are the sole reason that I breathe. My life is yours, my hopes and desires too. Until my dying day, my heart is reserved just for you. You are everything I could ever need and more, More than I deserve or would dare wish for. You are my baby, my angel, my dream girl I\'m thankful every day that you are my whole world. For the time I spend with you, my heart truly sings My one, My only, My EVERYTHING. Source: https://www.familyfriendpoems.com/poem/my-one-my-only-my-everythingFor so long, I wished for the day. The day that our love would find its way. From my heart and into your soul, The feeling so strong, I had no control. When then that day came, when I found you again, I vowed never to make the same mistake. I knew I would never let you go, For my life is now complete in a way I cannot show. For eternity I will spend making you believe, You are the sole reason that I breathe. My life is yours, my hopes and desires too. Until my dying day, my heart is reserved just for you. You are everything I could ever need and more, More than I deserve or would dare wish for. You are my baby, my angel, my dream girl I\'m thankful every day that you are my whole world. For the time I spend with you, my heart truly sings My one, My only, My EVERYTHING. Source: https://www.familyfriendpoems.com/poem/my-one-my-only-my-everything...For so long, I wished for the day. The day that our love would find its way. From my heart and into your soul, The feeling so strong, I had no control. When then that day came, when I found you again, I vowed never to make the same mistake. I knew I would never let you go, For my life is now complete in a way I cannot show. For eternity I will spend making you believe, You are the sole reason that I breathe. My life is yours, my hopes and desires too. Until my dying day, my heart is reserved just for you. You are everything I could ever need and more, More than I deserve or would dare wish for. You are my baby, my angel, my dream girl I\'m thankful every day that you are my whole world. For the time I spend with you, my heart truly sings My one, My only, My EVERYTHING. Source: https://www.familyfriendpoems.com/poem/my-one-my-only-my-everything';
+        story.innerHTML = innerstory;
+        modal.style.display = "block";
+      }
+
+      for (var i = 0; i < link.length; i++) {
+        link[i].onclick = showEntry;
+      }
+
+      // When the user clicks anywhere outside of the modal, close it
+      window.onclick = function(event) {
+          if (event.target == modal) {
+              modal.style.display = "none";
+          }
+      }
+
     </script>
   </body>
 </html>
