Add header and footer

--- a/UI/enteries.html
+++ b/UI/enteries.html
@@ -64,7 +64,7 @@
         <section class="col-10 mainentries"><!-- Mainenteries -->
           <div class="row">
             <div id="new_link" class="col-12">
-              <a href="">New Entry</a>
+              <a href="new_entry.html">New Entry</a>
             </div>
             <div id="content">
               <article class="col-2 col-s-4">
@@ -220,7 +220,7 @@
                 <p id="story"></p>
                 <div class="row">
                   <div class="modal_buttons">
-                    <a href="edit.html">Edit</a>
+                    <a href="edit_entry.html">Edit</a>
                     <button id="delete">Delete</button>
                   </div>
                 </div>
