Add form to save new entry

--- a/UI/index.html
+++ b/UI/index.html
@@ -6,7 +6,7 @@
     <title>MyDiary</title>
     <link rel="stylesheet" type="text/css" href="style/style.css">
   </head>
-  <body class="home"> 
+  <body > 
     <header class="row">
       <div class="logo col-6">
         <h2><a href=""><span class="logoA">My</span>Diary</a></h2>
@@ -26,7 +26,7 @@
               <h1>Login</h1>
             </div>
             <div class="loginform">
-              <form action="enteries.html">
+              <form action="entries.html">
                 <div class="inputdiv col-12">
                   <input type="email" name="email" id="email" placeholder="Enter Email" required>
                   <br>
