--- a/UI/signup.html
+++ b/UI/signup.html
@@ -6,7 +6,7 @@
     <title>MyDiary</title>
     <link rel="stylesheet" type="text/css" href="style/style.css">
   </head>
-  <body class="home"> 
+  <body> 
     <header class="row">
       <div class="logo col-6">
         <h2><a href=""><span class="logoA">My</span>Diary</a></h2>
