--- a/UI/new_entry.html
+++ b/UI/new_entry.html
@@ -6,7 +6,7 @@
     <title>MyDiary</title>
     <link rel="stylesheet" type="text/css" href="style/style.css">
   </head>
-  <body class="home"> 
+  <body> 
     <header class="row">
       <div class="logo col-6">
         <h2><a href="index.html"><span class="logoA">My</span>Diary</a></h2>
@@ -19,10 +19,83 @@
       </div>      
     </header> 
 
+    <div id="mainWrapper"><!-- .Main Wrapper -->
+      <div class="row">
+        <aside class="col-2"><!-- Aside -->
+          <h3>ENTERIES</h3>
+          <section id="entriesList">
+            <nav class="sidenav">
+              <ul>
+                <a href=""><li>Story Title</li></a>
+                <a href=""><li>Story Title</li></a>
+                <a href=""><li>Story Title</li></a>
+                <a href=""><li>Story Title</li></a>
+                <a href=""><li>Story Title</li></a>
+                <a href=""><li>Story Title</li></a>
+                <a href=""><li>Story Title</li></a>
+                <a href=""><li>Story Title</li></a>
+                <a href=""><li>Story Title</li></a>
+                <a href=""><li>Story Title</li></a>
+                <a href=""><li>Story Title</li></a>
+              </ul>
+            </nav>
+          </section>
+
+          <h3>CATEGORIES</h3>
+          <section id="entriesList">
+            <nav class="sidenav">
+              <ul>
+                <a href=""><li>Love</li></a>
+                <a href=""><li>Family</li></a>
+                <a href=""><li>School</li></a>
+                <a href=""><li>Friendship</li></a>
+                <a href=""><li>Sex</li></a>
+                <a href=""><li>Father</li></a>
+                <a href=""><li>God</li></a>
+                <a href=""><li>Mother</li></a>
+                <a href=""><li>James</li></a>
+                <a href=""><li>Freedom</li></a>
+                <a href=""><li>Life</li></a>
+              </ul>
+            </nav>
+          </section>
+        </aside><!-- Aside Ends -->
+
+        <section class="col-10 mainentries"><!-- Mainenteries -->
+          <div class="row">
+            <div id="new_link" class="col-12">
+              <a href="entries.html">All Entries</a>
+            </div>
+            <div id="new_form">
+              <h1>New Entry</h1>
+              <form id="add_new_form" role="form">
+                <div>
+                  <input class="form-input " type="text" id="title" name="title" placeholder="&plus;Title" required>
+                </div>
+                <div>
+                  <input class="form-input " type="text" id="category" name="category" placeholder="Category">
+                </div>
+                <div>
+                  <input class="form-input " type="file" name="entry_image">
+                </div>
+                <div>
+                <div>
+                  <textarea id="story" class="form-input" rows="5" cols="6" required></textarea>
+                </div>
+                <div>
+                  <input type="submit" name="submit" value="SAVE" class="form-input">
+                </div>
+              </form>
+            </div>
+          </div>
+        </section><!-- Mainenteries Ends -->
+      </div>
+    </div><!-- .Main Wrapper End -->
+
     <footer>
       &copy; 2018 | MyDiary
     </footer>
 
-    <script type="text/javascript" src="script/displayEntry.js"></script>
+    <script type="text/javascript" src=""></script>
   </body>
 </html>
