Modify site color

--- a/UI/entries.html
+++ b/UI/entries.html
@@ -51,7 +51,7 @@
                 <a href=""><li>Friendship</li></a>
                 <a href=""><li>Sex</li></a>
                 <a href=""><li>Father</li></a>
-                <a href=""><li>God</li></a>
+                <a href=""><li>Religion</li></a>
                 <a href=""><li>Mother</li></a>
                 <a href=""><li>James</li></a>
                 <a href=""><li>Freedom</li></a>
