--- a/UI/profile.html
+++ b/UI/profile.html
@@ -48,7 +48,7 @@
                 <textarea class="profile-input"></textarea>
               </div>
               <div>
-                <input type="submit" name="save" value="save" class="form-input">
+                <input type="submit" name="save" value="Save" class="form-input">
               </div>
             </form>
             </fieldset>
