--- a/UI/signup.html
+++ b/UI/signup.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="inputdiv col-12">
                   <div class="passlnk col-12">
-                    <input type="submit" name="" value="Sign Up" style="background-color: green">
+                    <input type="submit" name="" value="Sign Up">
                   </div>
                 </div>
               </form>
