--- a/UI/edit_entry.html
+++ b/UI/edit_entry.html
@@ -66,7 +66,7 @@
             <div id="new_link" class="col-12">
               <a href="entries.html">All Entries</a>
             </div>
-            <div id="new_form">
+            <div id="edit_form">
               <h1>Modify Entry</h1>
               <form id="modify_form" role="form">
                 <div>
