Add landing page

--- a/UI/index.html
+++ b/UI/index.html
@@ -6,49 +6,36 @@
     <title>MyDiary</title>
     <link rel="stylesheet" type="text/css" href="style/style.css">
   </head>
-  <body > 
+  <body class="index"> 
     <header class="row">
       <div class="logo col-6">
         <h2><a href=""><span class="logoA">My</span>Diary</a></h2>
       </div>  
       <div class="linkdiv col-6">
         <ul class="headerLinks">
-          <li><a href="signup.html">Create Account</a></li>
+          <li><a href="login.html">Log In</a></li>
         </ul>
       </div>      
     </header> 
 
     <div id="mainwrapper"><!-- .Main wrapper -->
-      <div class="row">
-        <div class="col-12">
-          <article class="loginbox">
-            <div class="logindiv">
-              <h1>Login</h1>
-            </div>
-            <div class="loginform">
-              <form action="entries.html">
-                <div class="inputdiv col-12">
-                  <input type="email" name="email" id="email" placeholder="Enter Email" required>
-                  <br>
-                  <label for="email">EMAIL ADDRESS</label>
-                </div>
-                <div class="inputdiv col-12">
-                  <input type="password" name="pass" id="pass" placeholder="Enter password" required>
-                  <br>
-                  <label for="pass">PASSWORD</label>
-                </div>
-                <div class="inputdiv col-12">
-                  <div class="passlnk col-8">
-                    <label><a href="">Forgot your password?</a></label>
-                  </div>
-                  <div class="col-4">
-                    <input type="submit" name="" value="Sign in">
-                  </div>
-                </div>
-              </form>
-            </div>
+      <div class="intro">
+        <h1>My Diary</h1>
+        <p>
+          Everyone can have their own personal online diary or journal on the Internet! We will host your journal online at no cost. Go ahead and create your own private diary today. Our focus is on security and privacy, and diaries are private by default
+        </p>
+        <a href="signup.html"><button>Create Account</button></a>
+       <!--  <div class="row">
+          <article class="cards col-3">
+            <h1>STEP 1</h1>
           </article>
-        </div>
+          <article class="cards col-3">
+            <h1>STEP 1</h1>
+          </article>
+          <article class="cards col-3">
+            <h1>STEP 1</h1>
+          </article>
+        </div> -->
       </div>
     </div><!-- .Main wrapper End -->
 
@@ -56,4 +43,4 @@
       &copy; 2018 | MyDiary
     </footer>
   </body>
-</html>
+</ht
