--- a/UI/login.html
+++ b/UI/login.html
@@ -6,14 +6,14 @@
     <title>MyDiary</title>
     <link rel="stylesheet" type="text/css" href="style/style.css">
   </head>
-  <body> 
+  <body > 
     <header class="row">
       <div class="logo col-6">
         <h2><a href=""><span class="logoA">My</span>Diary</a></h2>
       </div>  
       <div class="linkdiv col-6">
         <ul class="headerLinks">
-          <li><a href="login.html">Log In</a></li>
+          <li><a href="signup.html">Create Account</a></li>
         </ul>
       </div>      
     </header> 
@@ -21,12 +21,12 @@
     <div id="mainwrapper"><!-- .Main wrapper -->
       <div class="row">
         <div class="col-12">
-          <article class="signinbox">
+          <article class="loginbox">
             <div class="logindiv">
-              <h1>Sign Up</h1>
+              <h1>Login</h1>
             </div>
             <div class="loginform">
-              <form>
+              <form action="entries.html">
                 <div class="inputdiv col-12">
                   <input type="email" name="email" id="email" placeholder="Enter Email" required>
                   <br>
@@ -38,25 +38,22 @@
                   <label for="pass">PASSWORD</label>
                 </div>
                 <div class="inputdiv col-12">
-                  <input type="password" name="pass2" id="pass2" placeholder="Re-Enter password" required>
-                  <br>
-                  <label for="pass2">CONFIRM PASSWORD</label>
-                </div>
-                <div class="inputdiv col-12">
-                  <div class="passlnk col-12">
-                    <input type="submit" name="" value="Sign Up">
+                  <div class="passlnk col-8">
+                    <label><a href="">Forgot your password?</a></label>
+                  </div>
+                  <div class="col-4">
+                    <input type="submit" name="" value="Sign in">
                   </div>
                 </div>
               </form>
-            </div><!-- .LoginBox -->
-          </article><!-- .LoginBox End -->
+            </div>
+          </article>
         </div>
       </div>
-    </div>
+    </div><!-- .Main wrapper End -->
 
     <footer>
       &copy; 2018 | MyDiary
     </footer>
   </body>
 </html>
-
