--- a/UI/edit_entry.html
+++ b/UI/edit_entry.html
@@ -20,76 +20,38 @@
     </header> 
 
     <div id="mainWrapper"><!-- .Main Wrapper -->
-      <div class="row">
-        <aside class="col-2"><!-- Aside -->
-          <h3>ENTERIES</h3>
-          <section id="entriesList">
-            <nav class="sidenav">
-              <ul>
-                <a href=""><li>Story Title</li></a>
-                <a href=""><li>Story Title</li></a>
-                <a href=""><li>Story Title</li></a>
-                <a href=""><li>Story Title</li></a>
-                <a href=""><li>Story Title</li></a>
-                <a href=""><li>Story Title</li></a>
-                <a href=""><li>Story Title</li></a>
-                <a href=""><li>Story Title</li></a>
-                <a href=""><li>Story Title</li></a>
-                <a href=""><li>Story Title</li></a>
-                <a href=""><li>Story Title</li></a>
-              </ul>
-            </nav>
-          </section>
-
-          <h3>CATEGORIES</h3>
-          <section id="entriesList">
-            <nav class="sidenav">
-              <ul>
-                <a href=""><li>Love</li></a>
-                <a href=""><li>Family</li></a>
-                <a href=""><li>School</li></a>
-                <a href=""><li>Friendship</li></a>
-                <a href=""><li>Sex</li></a>
-                <a href=""><li>Father</li></a>
-                <a href=""><li>God</li></a>
-                <a href=""><li>Mother</li></a>
-                <a href=""><li>James</li></a>
-                <a href=""><li>Freedom</li></a>
-                <a href=""><li>Life</li></a>
-              </ul>
-            </nav>
-          </section>
-        </aside><!-- Aside Ends -->
-
-        <section class="col-10 mainentries"><!-- Mainenteries -->
-          <div class="row">
-            <div id="new_link" class="col-12">
-              <a href="entries.html">All Entries</a>
+      <div id="wrapper">
+        <div class="row">
+          <section class="col-12 mainentries"><!-- Mainenteries -->
+            <div class="row">
+              <div id="new_link" class="col-12">
+                <a href="entries.html">All Entries</a>
+              </div>
+              <div id="edit_form">
+                <h1>Modify Entry</h1>
+                <form id="modify_form" role="form">
+                  <div>
+                    <input class="form-input " type="text" id="title" name="title" value="Wont Give Up" required>
+                  </div>
+                  <div>
+                    <input class="form-input " type="text" id="category" name="category" value="Love">
+                  </div>
+                  <div>
+                    <input class="form-input " type="file" name="entry_image">
+                  </div>
+                  <div>
+                  <div>
+                    <textarea id="story" class="form-input" rows="5" cols="6" required>For so long, I wished for the day. The day that our love would find its way. From my heart and into your soul, The feeling so strong, I had no control. When then that day came, when I found you again, I vowed never to make the same mistake. I knew
+                    </textarea>
+                  </div>
+                  <div>
+                    <input type="submit" name="submit" value="SAVE" class="form-input">
+                  </div>
+                </form>
+              </div>
             </div>
-            <div id="edit_form">
-              <h1>Modify Entry</h1>
-              <form id="modify_form" role="form">
-                <div>
-                  <input class="form-input " type="text" id="title" name="title" value="Wont Give Up" required>
-                </div>
-                <div>
-                  <input class="form-input " type="text" id="category" name="category" value="Love">
-                </div>
-                <div>
-                  <input class="form-input " type="file" name="entry_image">
-                </div>
-                <div>
-                <div>
-                  <textarea id="story" class="form-input" rows="5" cols="6" required>For so long, I wished for the day. The day that our love would find its way. From my heart and into your soul, The feeling so strong, I had no control. When then that day came, when I found you again, I vowed never to make the same mistake. I knew
-                  </textarea>
-                </div>
-                <div>
-                  <input type="submit" name="submit" value="SAVE" class="form-input">
-                </div>
-              </form>
-            </div>
-          </div>
-        </section><!-- Mainenteries Ends -->
+          </section><!-- Mainenteries Ends -->
+        </div><!-- row ends -->
       </div>
     </div><!-- .Main Wrapper End -->
 
