--- a/UI/edit_entry.html
+++ b/UI/edit_entry.html
@@ -28,24 +28,29 @@
                 <a href="entries.html">All Entries</a>
               </div>
               <div id="edit_form">
-                <h1>Modify Entry</h1>
+                <h1 class="headin">Modify Entry</h1>
                 <form id="modify_form" role="form">
                   <div>
-                    <input class="form-input " type="text" id="title" name="title" value="Wont Give Up" required>
+                    <label class="col-3">Title:</label>
+                    <input class="form-input col-8 " type="text" id="title" name="title" value="Wont Give Up" required>
                   </div>
                   <div>
-                    <input class="form-input " type="text" id="category" name="category" value="Love">
+                    <label class="col-3">Category:</label>
+                    <input class="form-input col-8" type="text" id="category" name="category" value="Love">
                   </div>
                   <div>
-                    <input class="form-input " type="file" name="entry_image">
+                    <label class="col-3">Image:</label>
+                    <input class="form-input col-8" type="file" name="entry_image">
                   </div>
                   <div>
                   <div>
-                    <textarea id="story" class="form-input" rows="5" cols="6" required>For so long, I wished for the day. The day that our love would find its way. From my heart and into your soul, The feeling so strong, I had no control. When then that day came, when I found you again, I vowed never to make the same mistake. I knew
+                    <label class="col-3">Story:</label>
+                    <textarea id="story" class="form-input col-8" rows="5" cols="6" required>For so long, I wished for the day. The day that our love would find its way. From my heart and into your soul, The feeling so strong, I had no control. When then that day came, when I found you again, I vowed never to make the same mistake. I knew
                     </textarea>
                   </div>
                   <div>
-                    <input type="submit" name="submit" value="SAVE" class="form-input">
+                    <div class="col-3"></div>
+                    <input type="submit" name="submit" value="SAVE" class="form-input col-12">
                   </div>
                 </form>
               </div>
