--- a/UI/new_entry.html
+++ b/UI/new_entry.html
@@ -28,23 +28,28 @@
                 <a href="entries.html">All Entries</a>
               </div>
               <div id="new_form">
-                <h1>New Entry</h1>
+                <h1 class="headin">New Entry</h1>
                 <form id="add_new_form" role="form">
                   <div>
-                    <input class="form-input " type="text" id="title" name="title" placeholder="&plus;Title" required>
+                    <label class="col-3">Title:</label>
+                    <input class="form-input col-8" type="text" id="title" name="title" placeholder="&plus;Title" required>
                   </div>
                   <div>
-                    <input class="form-input " type="text" id="category" name="category" placeholder="Category">
+                    <label class="col-3">Category:</label>
+                    <input class="form-input col-8" type="text" id="category" name="category" placeholder="Category">
                   </div>
                   <div>
-                    <input class="form-input " type="file" name="entry_image">
+                    <label class="col-3">Image:</label>
+                    <input class="form-input col-8" type="file" name="entry_image">
                   </div>
                   <div>
                   <div>
-                    <textarea id="story" class="form-input" rows="5" cols="6" required></textarea>
+                    <label class="col-3">Story:</label>
+                    <textarea id="story" class="form-input col-8" rows="5" cols="6" required></textarea>
                   </div>
                   <div>
-                    <input type="submit" name="submit" value="SAVE" class="form-input">
+                    <div class="col-3"></div>
+                    <input type="submit" name="submit" value="SAVE" class="form-input col-8">
                   </div>
                 </form>
               </div>
