--- a/UI/profile.html
+++ b/UI/profile.html
@@ -27,28 +27,31 @@
               <legend>Profile</legend>
               <form class="profile_form">
               <div>
-                <label for="firstname">First Name:</label>
-                <input type="text" name="firstname" id="firstname" class="profile-input">
+                <label for="firstname" class="col-3">First Name:</label>
+                <input type="text" name="firstname" id="firstname" class="profile-input col-8">
               </div>
               <div>
-                <label for="lastname">Last Name:</label>
-                <input type="text" name="lastname" id="lastname" class="profile-input">
+                <label for="lastname" class="col-3">Last Name:</label>
+                <input type="text" name="lastname" id="lastname" class="profile-input col-8">
               </div>
               <div>
-                <label for="email">Email:</label>
-                <input type="text" name="email" id="email" class="profile-input">
+                <label for="email" class="col-3">Email:</label>
+                <input type="text" name="email" id="email" class="profile-input col-8">
               </div>
               <div>
-                <label for="sex">Sex:</label>
-                <input type="radio" name="sex" id="male" value="M"> Male
-                <input type="radio" name="sex" id="female" value="F"> Female
+                <label for="sex" class="col-3">Sex:</label>
+                <div class="profile-input no-border col-8">
+                  <input type="radio" name="sex" id="male" value="M"> Male
+                  <input type="radio" name="sex" id="female" value="F"> Female
+                </div>
               </div>
               <div>
-                <label for="About">About me:</label>
-                <textarea class="profile-input"></textarea>
+                <label for="About" class="col-3">About me:</label>
+                <textarea class="profile-input col-8"></textarea>
               </div>
               <div>
-                <input type="submit" name="save" value="Save" class="form-input">
+                <div class="col-3"></div>
+                <input type="submit" name="save" value="Save" class="form-input col-8">
               </div>
             </form>
             </fieldset>
