--- a/UI/profile.html
+++ b/UI/profile.html
@@ -22,7 +22,21 @@
     <div id="profilewrapper">
       <div class="row">
         <div class="col-12">
-          <section class="profile">
+          <section class="profile">            
+         <!--    <fieldset>
+              <legend>Entries Details</legend>
+              <p>Total Enteries: 340</p>
+              <p>Total Enteries Deleted: 40</p>
+            </fieldset> -->
+
+            <fieldset>
+              <legend>Setting</legend>
+              <p>Get notifications via email to write an entry</p>
+              <input type="radio" name="notification" value="12">12 PM Daily
+              <input type="radio" name="notification" value=""> Weekly
+              <input type="radio" name="notification" value=""> Once a month
+              <input type="radio" name="notification" checked value="0"> None
+            </fieldset>
             <fieldset>
               <legend>Profile</legend>
               <form class="profile_form">
@@ -50,25 +64,10 @@
                 <textarea class="profile-input col-8"></textarea>
               </div>
               <div>
-                <div class="col-3"></div>
-                <input type="submit" name="save" value="Save" class="form-input col-8">
+                <div class="col-9"></div>
+                <input type="submit" name="save" value="Save" class="form-input col-3">
               </div>
             </form>
-            </fieldset>
-
-            <fieldset>
-              <legend>Entries Details</legend>
-              <p>Total Enteries: 340</p>
-              <p>Total Enteries Deleted: 40</p>
-            </fieldset>
-
-            <fieldset>
-              <legend>Setting</legend>
-              <p>Get notifications via email to write an entry</p>
-              <input type="radio" name="notification" value="12">12 PM Daily
-              <input type="radio" name="notification" value=""> Weekly
-              <input type="radio" name="notification" value=""> Once a month
-              <input type="radio" name="notification" checked value="0"> None
             </fieldset>
           </section>
         </div>
