--- a/UI/profile.html
+++ b/UI/profile.html
@@ -22,21 +22,7 @@
     <div id="profilewrapper">
       <div class="row">
         <div class="col-12">
-          <section class="profile">            
-         <!--    <fieldset>
-              <legend>Entries Details</legend>
-              <p>Total Enteries: 340</p>
-              <p>Total Enteries Deleted: 40</p>
-            </fieldset> -->
-
-            <fieldset>
-              <legend>Setting</legend>
-              <p>Get notifications via email to write an entry</p>
-              <input type="radio" name="notification" value="12">12 PM Daily
-              <input type="radio" name="notification" value=""> Weekly
-              <input type="radio" name="notification" value=""> Once a month
-              <input type="radio" name="notification" checked value="0"> None
-            </fieldset>
+          <section class="profile">
             <fieldset>
               <legend>Profile</legend>
               <form class="profile_form">
@@ -63,6 +49,16 @@
                 <label for="About" class="col-3">About me:</label>
                 <textarea class="profile-input col-8"></textarea>
               </div>
+              <div>
+                <label for="sex" class="col-3">reminder:</label>
+                <div class="profile-input no-border col-8">
+                  <input type="radio" name="notification" value="12">12 PM Daily
+                <input type="radio" name="notification" value=""> Weekly
+                <input type="radio" name="notification" value=""> Once a month
+                <input type="radio" name="notification" checked value="0"> None
+                </div>
+              </div>
+             
               <div>
                 <div class="col-9"></div>
                 <input type="submit" name="save" value="Save" class="form-input col-3">
