Add sign up functionality

--- a/client/signup.html
+++ b/client/signup.html
@@ -26,7 +26,7 @@
               <h1>Sign Up</h1>
             </div>
             <div class="loginform">
-              <form>
+              <form name="signup_form" id="signup_form">
                 <div class="inputdiv col-12">
                   <input type="email" name="email" id="email" placeholder="Enter Email" required>
                   <br>
@@ -44,7 +44,7 @@
                 </div>
                 <div class="inputdiv col-12">
                   <div class="passlnk col-12">
-                    <input type="submit" name="" value="Sign Up">
+                    <input type="submit" name="signup_btn" id="signup_btn" value="Sign Up">
                   </div>
                 </div>
               </form>
@@ -57,6 +57,8 @@
     <footer>
       &copy; 2018 | MyDiary
     </footer>
+
+    <script type="text/javascript" src="js/auth.js"></script>
   </body>
 </html>
 
