Add helper function to display message

--- a/client/signup.html
+++ b/client/signup.html
@@ -21,6 +21,9 @@
     <div id="mainwrapper"><!-- .Main wrapper -->
       <div class="row">
         <div class="col-12">
+          <div class="" id="display">
+            <p id="alert"></p>
+          </div>
           <article class="signinbox">
             <div class="logindiv">
               <h1>Sign Up</h1>
@@ -58,6 +61,7 @@
       &copy; 2018 | MyDiary
     </footer>
 
+    <script type="text/javascript" src="js/functions.js"></script>
     <script type="text/javascript" src="js/auth.js"></script>
   </body>
 </html>
