[feature 159481810] Add functionality for add new entry

--- a/client/new_entry.html
+++ b/client/new_entry.html
@@ -35,7 +35,7 @@
                 <form id="add_new_form" role="form">
                   <div>
                     <label class="col-3">Title:</label>
-                    <input class="form-input col-8" type="text" id="title" name="title" placeholder="&plus;Title" required>
+                    <input class="form-input col-8" type="text" id="title" name="title" placeholder="Title" required>
                   </div>
                   <div>
                     <label class="col-3">Category:</label>
@@ -66,6 +66,7 @@
       &copy; 2018 | MyDiary
     </footer>
 
-    <script type="text/javascript" src=""></script>
+    <script type="text/javascript" src="js/functions.js"></script>
+    <script type="text/javascript" src="js/addEntry.js"></script>
   </body>
 </html>
