[chore 159495482] Implement feedback

--- a/client/signup.html
+++ b/client/signup.html
@@ -62,7 +62,7 @@
     </footer>
 
     <script type="text/javascript" src="js/functions.js"></script>
-    <script type="text/javascript" src="js/auth.js"></script>
+    <script type="text/javascript" src="js/signupAuth.js"></script>
   </body>
 </html>
 
