--- a/client/entries.html
+++ b/client/entries.html
@@ -28,9 +28,11 @@
               <div id="new_link" class="col-12">
                 <a href="new_entry.html" class="">New Entry</a>
               </div>
+              <div class="" id="display">
+                <p id="alert"></p>
+              </div>
               <div id="content">
-                <article class="col-4 col-m-2 col-s-4">
-                  
+         <!--        <article class="col-4 col-m-2 col-s-4">                  
                     <figure>
                       <img src="images/miss_u.jpg" alt="Missing you" width="100%">
                       <a href="" class="link">
@@ -139,7 +141,7 @@
                         <a href="edit_entry.html" class="btn btn-edit">Edit</a><a href="" class="btn btn-delete">Delete</a>
                       </div>
                     </figure>
-                </article>
+                </article> -->
 
                 <!-- The Modal -->
               <div id="myModal" class="modal">
@@ -169,6 +171,8 @@
       &copy; 2018 | MyDiary
     </footer>
 
+    <script type="text/javascript" src="js/functions.js"></script>
     <script type="text/javascript" src="js/displayEntry.js"></script>
+    <script type="text/javascript" src="js/allEntries.js"></script>
   </body>
 </html>
