[feature 159547306] Add functionalitity to edit an entry

--- a/client/edit_entry.html
+++ b/client/edit_entry.html
@@ -27,16 +27,19 @@
               <div id="new_link" class="col-12">
                 <a href="entries.html">All Entries</a>
               </div>
+              <div class="" id="display">
+                <p id="alert"></p>
+              </div>
               <div id="edit_form">
                 <h1 class="headin">Modify Entry</h1>
                 <form id="modify_form" role="form">
                   <div>
                     <label class="col-3">Title:</label>
-                    <input class="form-input col-8 " type="text" id="title" name="title" value="Wont Give Up" required>
+                    <input class="form-input col-8 " type="text" id="title" name="title" required>
                   </div>
                   <div>
                     <label class="col-3">Category:</label>
-                    <input class="form-input col-8" type="text" id="category" name="category" value="Love">
+                    <input class="form-input col-8" type="text" id="category" name="category">
                   </div>
                   <div>
                     <label class="col-3">Image:</label>
@@ -45,7 +48,7 @@
                   <div>
                   <div>
                     <label class="col-3">Story:</label>
-                    <textarea id="story" class="form-input col-8" rows="5" cols="6" required>For so long, I wished for the day. The day that our love would find its way. From my heart and into your soul, The feeling so strong, I had no control. When then that day came, when I found you again, I vowed never to make the same mistake. I knew
+                    <textarea id="story" class="form-input col-8" rows="5" cols="6" required>
                     </textarea>
                   </div>
                   <div>
@@ -64,6 +67,7 @@
       &copy; 2018 | MyDiary
     </footer>
 
-    <script type="text/javascript" src=""></script>
+    <script type="text/javascript" src="js/functions.js"></script>
+    <script type="text/javascript" src="js/editEntry.js"></script>
   </body>
 </html>
