--- a/client/entries.html
+++ b/client/entries.html
@@ -15,7 +15,7 @@
       <div class="linkdiv col-6">
         <ul class="headerLinks">
           <li><a href="profile.html">Profile</a></li>
-          <li><a href="index.html">Log Out</a></li>
+          <li><a id="logout">Log Out</a></li>
         </ul>
       </div>      
     </header> 
