[chore 159716074] Add functionality for uploading images

--- a/client/edit_entry.html
+++ b/client/edit_entry.html
@@ -43,7 +43,7 @@
                   </div>
                   <div>
                     <label class="col-3">Image:</label>
-                    <input class="form-input col-8" type="file" name="entry_image">
+                    <input class="form-input col-8" type="file" name="entry_image" id="entry_image">
                   </div>
                   <div>
                   <div>
