[feature 159430734] Add function to send daily reminder emails

--- a/client/profile.html
+++ b/client/profile.html
@@ -44,8 +44,8 @@
               <div>
                 <label for="sex" class="col-3">Sex:</label>
                 <div class="profile-input no-border col-8">
-                  <input type="radio" name="sex" id="male" value="0"> Male
-                  <input type="radio" name="sex" id="female" value="1"> Female
+                  <input type="radio" name="sex" id="male" value="true"> Male
+                  <input type="radio" name="sex" id="female" value="false"> Female
                 </div>
               </div>
               <div>
@@ -55,8 +55,8 @@
               <div>
                 <label for="notification" class="col-3">Reminder:</label>
                 <div class="profile-input no-border col-8">
-                  <input type="radio" name="notification" value="1">Yes
-                  <input type="radio" name="notification" checked value="0"> No
+                  <input type="radio" name="notification" checked value="true">Yes
+                  <input type="radio" name="notification" value="false"> No
                 </div>
               </div>
              
