[feature 159430734] Fix no entry available error

--- a/client/entries.html
+++ b/client/entries.html
@@ -26,13 +26,15 @@
           <section class="col-12 mainentries"><!-- Mainenteries -->
             <div class="row">
               <div id="new_link" class="col-12">
-                <a href="new_entry.html" class="">New Entry</a>
+                <a href="new_entry.html" id="newLink">New Entry</a>
               </div>
               <div class="" id="display">
                 <p id="alert"></p>
               </div>
               <div id="content">
-                
+                <div class="" id="no_entry">
+                  <p id="no-entry"></p>
+                </div>
                 <!-- The Modal -->
                 <div id="myModal" class="modal">
                 </div>
@@ -45,7 +47,7 @@
       </div>
     </div><!-- .Main Wrapper End -->
 
-    <footer>
+    <footer id="entry-footer">
       &copy; 2018 | MyDiary
     </footer>
 
